test/compile-errors/modifier-conflict.crow
main void()
	()

dm extern data mut

ms record mut shared

sfs record shared force-shared

bvbr record by-val by-ref
